# tokenguard

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  pricing.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
docs/book-en/: SUMMARY.md  advanced.md  book.toml  clients.md  limits-recipes.md  provider-examples.md  providers.md  security.md  troubleshooting.md  usage-guide.md
docs/book-en/src/: faq.md  intro.md  limits.md  projects.md  providers.md  quickstart.md  tray.md
docs/book-zh/: SUMMARY.md  advanced.md  book.toml  clients.md  intro.md  limits-recipes.md  provider-examples.md  providers.md  security.md  troubleshooting.md  usage-guide.md
docs/book-zh/src/: faq.md  intro.md  limits.md  projects.md  providers.md  quickstart.md  tray.md
scripts/: gen_icons.py  gen_tray_icons.py  generate_icons.py  install-mdbook.cjs
site/: buy.html  index.html  package-lock.json  package.json  privacy.html  refund.html  styles.css  terms.html  thanks.html
src/: App.tsx  i18n.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  cost.rs  db.rs  health.rs  lib.rs  license.rs  limits.rs  main.rs  notifications.rs  other.rs  prices.rs  runtime_config.rs  secrets.rs  state.rs  tokens.rs  updater.rs  webhook.rs  win_cred.rs
src-tauri/src/proxy/: convert.rs  forwarder.rs  mod.rs  server.rs  sse.rs
src/components/: Banner.tsx  Config.tsx  DailyUsageChart.tsx  Dashboard.tsx  Docs.tsx  ErrorBoundary.tsx  License.tsx  Limits.tsx  Logs.tsx  Onboarding.tsx  Projects.tsx  Providers.tsx  Settings.tsx  ThemeToggle.tsx  UsageChart.tsx
src/utils/: license.ts  providerPresets.ts  updater.ts
