[package]
name = "tokenguard"
version = "0.1.0"
description = "Local LLM gateway — track every token, nothing leaves your machine."
authors = ["QQSHI13"]
edition = "2021"
license = "LicenseRef-Proprietary"

[lib]
name = "tokenguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-stream = "0.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
keyring = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Credentials", "Win32_Foundation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
