[package]
name = "tokenguard"
version = "0.1.0"
description = "Local LLM gateway — track every token, nothing leaves your machine."
authors = ["QQSHI13"]
edition = "2021"
license = "LicenseRef-Proprietary"

[lib]
name = "tokenguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
keyring = { version = "4.1", features = ["windows-native-keyring-store", "apple-native-keyring-store", "dbus-secret-service-keyring-store"] }
tauri-plugin-notification = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
